Remove duplicate HTML content from index.html
Removed duplicate HTML content and cleaned up the structure.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                  <div class="tab-contents" id ="Experience">
                     <ul>
                         <li><span>2020-2021</span><br>completed 10TH</li>
-                        <li><span>2018-2020</span><br>Learning skills From Mom .</li>
-                        <li><span>2018-2020</span><br>Studing From Papa ji.</li>
+                        <li><span>2018-2020</span><br>Getting the bleessings of my parents.</li>
+                        <li><span>2018-2020</span><br>Studing the new things about the life from my Papa ji.</li>
                          
                     </ul>
                  </div>
@@ -92,7 +92,7 @@
 
  <div id="srevices">
     <div class="container">
-        <h1 class="sub-title">My services</h1>
+        <h1 class="sub-title">Our Services</h1>
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-shield-halved"></i>
@@ -137,8 +137,7 @@
                 <img src="images/3.webp">
                 <div class="layer">
                     <h3>Music App</h3>
-                    <p>The app connects you ,yo the talented people around the world.
-                        JOIN with our channel. </p>
+                     
                      <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -219,3 +218,4 @@
 
 </body>
 </html>
+
